applications/kibana/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Elasticsearch Kibana
    gethomepage.dev/description: You Know, for Search
    gethomepage.dev/group: Services
    gethomepage.dev/icon: elasticsearch
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: traefik
  rules:
    - host: kibana.services.sbling.net
      http:
        paths:
          - backend:
              service:
                name: kibana
                port:
                  number: 5601
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kibana.services.sbling.net
      secretName: kibana-services-sbling-net-prod-cert
